# clix

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.claude/rules/: coding.md  git-workflow.md
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  endpoint-health.yml  labeler.yml  pages.yml  release.yml
clix/: __init__.py  __main__.py
clix/cli/: app.py  article.py  dm.py  feed.py  helpers.py  jobs.py  lists.py  search.py  tweet.py  user.py
clix/core/: api.py  auth.py  client.py  config.py  constants.py  endpoints.py
clix/display/: formatter.py
clix/mcp/: server.py
clix/models/: dm.py  job.py  tweet.py  user.py
clix/utils/: article.py  filter.py  rate_limit.py
docs/: favicon.avif  index.html
docs/plans/: 2026-03-09-x-cli-design.md
tests/: test_api.py  test_article.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_constants.py  test_dm.py  test_dm_send.py  test_endpoint_coverage.py  test_endpoint_health.py  test_endpoints.py  test_filter.py  test_mcp.py  test_models.py
x_cli/core/: auth.py
