[project]
name = "clix"
version = "0.1.0"
description = "A command-line interface for Twitter/X using cookie-based authentication"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "spideystreet", email = "dhicham.pro@gmail.com" },
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "curl_cffi>=0.7.0",
    "pydantic>=2.0.0",
    "browser-cookie3>=0.19.0",
    "cryptography>=42.0.0",
]

[project.scripts]
clix = "clix.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
