[project]
name = "clix0"
version = "0.2.0"
description = "A command-line interface for Twitter/X using cookie-based authentication"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "spideystreet", email = "dhicham.pro@gmail.com" },
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "curl_cffi>=0.7.0",
    "pydantic>=2.0.0",
    "browser-cookie3>=0.19.0",
    "cryptography>=42.0.0",
    "mcp[cli]>=1.0.0",
]
keywords = ["twitter", "x", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/spideystreet/clix"
Repository = "https://github.com/spideystreet/clix"
Issues = "https://github.com/spideystreet/clix/issues"

[project.scripts]
clix = "clix.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clix"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit X.com (require network + cookies)",
]
